# claude-worker-client

./: .gitignore  README.md  pyproject.toml
src/claude_worker/: __init__.py  _sync.py  client.py  models.py
src/claude_worker_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_client.py  test_sync_client.py
