[project]
name = "claude-worker-client"
version = "0.1.0"
description = "Async Python client for the claude-worker agent runtime API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/"]

[project.urls]
Repository = "https://github.com/sammasak/claude-worker-client"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF", "C4", "TC"]
ignore = ["E501", "TC001", "TC003", "SIM117"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint.isort]
known-first-party = ["claude_worker"]
